Fix issue of drop down menu not being visible over map

--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -58,6 +58,7 @@
   font-size: 12px;
   position: absolute;
   background-color: white;
+  z-index: 9;
 }
 
 .drop-down-menu-item {
